# PolyView

./: .gitignore  CMakeLists.txt  License.txt  Readme.md  Readme.txt  build_deb_and_tgz.sh  conda_build_env.yml  debian.tgz  environment.yml  polyview.pro  polyview.qrc
.github/workflows/: build.yml  c-cpp.yml  conda_build.yml  linux_osx_conda_build.yml  test_workflow.yml  unix_conda_build.yml  windows.yml  windows_conda_build.yml
debian/DEBIAN/: control
geom/: Makefile  Readme.txt  baseUtils.h  cutPoly.cpp  cutPoly.h  dPoly.cpp  dPoly.h  dTree.cpp  dTree.h  edgeUtils.cpp  edgeUtils.h  geomUtils.cpp  geomUtils.h  kdTree.cpp  kdTree.h  polyPtsCmp.cpp  polyUtils.cpp  polyUtils.h  test_boxTree.cpp  test_cutPoly.cpp  test_dPoly.cpp  test_distBwPolys.cpp  test_edgesInBox.cpp  test_kdTree.cpp
gui/: Makefile.sample  Readme.txt  appWindow.cpp  appWindow.h  chooseFilesDlg.cpp  chooseFilesDlg.h  documentation.cpp  documentation.html  mainProg.cpp  polyView.cpp  polyView.h  polyview.pro  put_license  sample3.xg  sample4.xg  update_doc.pl  utils.cpp  utils.h
recipe/: bld.bat  build.sh  meta.yaml
testData/: Annotated.xg  all.xg  all_out.xg  anno.xg  bad.xg  before.xg  box.xg  box2.xg  box3.xg  bug1.xg  bug2.xg  clip1.xg  clip2.xg  clockwisePoly.xg  cut.xg  diff1.xg  diff2.xg  hole.xg  in.xg  line.xg  line2.xg  nonClosed.xg  open.xg  outBoxes.xg  outBoxes2.xg  out_poly.xg  p1.xg  p2.xg  point.xg  pol2_anno.xg  poly0.xg  poly0_out.xg  poly1.xg  poly1_out.xg  profile.xg  ptsInBox.xg  rectangle.xg  rectangle2.xg  rectangle3.xg  sample1.xg  (+29 more)
